<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Versapp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Versapp</string>
    <string name="title_activity_sign_up_name_email_input">Sign Up - Versapp</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="sign_up_name_hint">Name</string>
    <string name="sign_up_email_hint">Email</string>
    <string name="title_activity_sign_up_phone_verification_input">Sign Up - Versapp</string>
    <string name="phone_verification_header">Find Friends!</string>
    <string name="phone_verification_description">We just need to verify your number. \n\n
        We will also be looking for your friends!\n\n
        Versapp will never, ever, give your phone number away.</string>
    <string name="title_activity_verification_code_input">Verify Phone</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_sign_up_username_pass_input">Sign Up - Versapp</string>
    <string name="username_pass_input_header">Last Step!</string>
    <string name="sign_up_username_hint">Username</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="varification_code_input_header">Verify</string>
    <string name="sign_up_verification_code_hint">Code</string>
    <string name="title_activity_compose_confession">Compose Thought</string>
    <string name="compose_confession_hintt">Share a thought...</string>
    <string name="compose_confession_swipe_to_change_color_text">Swipe to change color</string>
    <string name="title_activity_friend_list">Friends</string>
    <string name="search_friend">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_account">Account</string>
    <string name="create_group_btn">Create Group</string>
    <string name="title_activity_chat_dashboard">Chats</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="dashboard_messages">Messages</string>
    <string name="dashboard_settings">Profile</string>
    <string name="dashboard_notifications">Notifications</string>
    <string name="dashboard_start_group">Start Anonymous\n Group</string>
    <string name="dashboard_start_one_to_one">Send Anonymous\n Message</string>
    <string name="title_activity_open_chat_from_notification">Versapp</string>
    <string name="title_activity_requests">Requests</string>
    <string name="no_chats_message">There are no conversations</string>
    <string name="title_activity_view_single_confession">View Thought</string>
    <string name="title_activity_open_activity_from_notification">Versapp</string>
    <string name="create_first_confession_chat">Start conversation with creator of this Thought! Click the chat bubble below!</string>
    <string name="activity_conversation_chat_explanation">Am I anonymous?\n Go to settings (top right) to find out.</string>
    <string name="fragment_confessions_oops_refresh_btn">Refresh</string>
    <string name="fragment_confessions_oops_label">Oops.. Something went wrong...</string>
    <string name="title_activity_invite_contact">InviteContactActivity</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="no_notifications">You don\'t have any notifications at this moment.</string>
    <string name="title_activity_chat_list">ChatListActivity</string>

</resources>
