<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.versapp.signup.SignUpUsernamePassInputActivity"
    android:background="@android:color/white">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username_pass_input_header"
        android:textSize="30sp"
        android:background="@color/confessionBlue"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:padding="15dp"
        android:id="@+id/sign_up_username_header_text" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textVisiblePassword|textNoSuggestions"
        android:textColorHint="@android:color/white"
        android:id="@+id/sign_up_username_edit"
        android:layout_below="@+id/sign_up_username_header_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:hint="@string/sign_up_username_hint"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/orangeBeauty"
        android:maxLength="20"><requestFocus></requestFocus></EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:textColorHint="@android:color/white"
        android:id="@+id/sign_up_password_edit"
        android:layout_margin="10dp"
        android:layout_below="@id/sign_up_username_edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_up_password_hint"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/orangeBeauty"
        android:maxLength="20"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_margin="10dp"
        android:textColorHint="@android:color/white"
        android:id="@+id/sign_up_confirm_password_edit"
        android:layout_below="@id/sign_up_password_edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/sign_up_password_hint"
        android:padding="10dp"
        android:gravity="center"
        android:background="@color/orangeBeauty"
        android:maxLength="20"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/confessionBlue"
        android:onClick="register" />

    <ProgressBar
        android:id="@+id/activity_sign_up_username_pass_input_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
