<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/fragment_main_buttons_holder"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        android:layout_marginBottom="1dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginRight="1dp"
            android:background="@color/confessionBlue">


            <ImageView
                android:id="@+id/fragment_main_one_to_one_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:src="@drawable/dashboard_start_one_to_one_image"/>

            <TextView
                android:id="@+id/fragment_main_one_to_one_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_start_one_to_one"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:paddingBottom="5dp"/>

            <ImageButton
                android:id="@+id/fragment_main_new_one_to_one_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="1dp"
            android:background="@color/confessionBlue">


            <ImageView
                android:id="@+id/fragment_group_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/start_group_conversation_btn"/>

            <TextView
                android:id="@+id/fragment_main_group_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dashboard_start_group"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"/>


            <ImageButton
                android:id="@+id/fragment_main_new_group_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"/>

        </RelativeLayout>


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:layout_marginTop="1dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginRight="1dp"
                android:background="@color/confessionBlue">

                <ImageView
                    android:id="@+id/fragment_main_notifications_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/fragment_main_notification_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_notifications"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fragment_main_notifications_image"
                    android:layout_marginTop="3dp"/>


                <ImageButton
                    android:id="@+id/fragment_main_notifications_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    />



            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="1dp"
                android:background="@color/confessionBlue">


                <ImageView
                    android:id="@+id/fragment_main_settings_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_centerInParent="true"
                    android:paddingBottom="10dp"/>

                <TextView
                    android:id="@+id/fragment_main_settings_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_settings"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/fragment_main_settings_image"
                    android:layout_marginTop="3dp"/>

                <ImageButton
                    android:id="@+id/fragment_main_settings_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"/>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_above="@id/fragment_main_buttons_holder"
        android:background="@color/confessionBlue">

        <TextView
            android:id="@+id/fragment_main_go_to_msg_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard_messages"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_alignParentBottom="true"/>

        <ImageView
            android:id="@+id/fragment_main_go_to_msg_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_above="@id/fragment_main_go_to_msg_image_label"
            android:src="@drawable/ic_owl_happy_tilt" />

        <ImageView
            android:id="@+id/fragment_main_new_message_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fragment_main_go_to_msg_image"
            android:layout_margin="10dp"/>


        <ImageButton
            android:id="@+id/go_to_msg_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"/>

    </RelativeLayout>


</RelativeLayout>